<resources>
    <string name="app_name">Курсы валют</string>
    <string name="title_main_page">Главная</string>
    <string name="title_for_period_page">За период</string>
    <string name="title_settings_page">Настройки</string>
    <string name="default_server_url">http://192.168.1.4:8080</string>
    <string name="text_period_start">Дата начала периода:</string>
    <string name="text_period_end">Дата окончания периода:</string>
    <string name="buttonText_get_currencies_for_period">Получить курс валюты за период</string>
    <string name="pref_server_ur_title">URL сервера</string>
    <string name="pref_server_url_summary">Нажмите, чтобы задать свой URL сервера</string>
    <string name="text_settings">Настройки</string>
    <string name="text_charcode_and_nominal">CharCode and Nominal</string>
    <string name="text_date">Date</string>
    <string name="text_value">Value</string>
    <string name="text_difference">Разница</string>
    <string name="text_favorite_currencies">Курсы отслеживаемых валют</string>
    <string name="text_currency_name">Currency name</string>

    <string-array name="pref_favorite_currencies">
        <item>Австралийский доллар</item>
        <item>Фунт стерлингов Соединенного королевства</item>
        <item>Белорусских рублей</item>
        <item>Датских крон</item>
        <item>Доллар США</item>
        <item>Евро</item>
        <item>Азербайджанский манат</item>
        <item>Армянских драмов</item>
        <item>Белорусский рубль</item>
        <item>Болгарский лев</item>
        <item>Бразильский реал</item>
        <item>Венгерских форинтов</item>
        <item>Гонконгских долларов</item>
        <item>Индийских рупий</item>
        <item>Казахстанских тенге</item>
        <item>Канадский доллар</item>
        <item>Киргизских сомов</item>
        <item>Китайских юаней</item>
        <item>Молдавских леев</item>
        <item>Норвежских крон</item>
        <item>Польский злотый</item>
        <item>Румынский лей</item>
        <item>СДР (специальные права заимствования)</item>
        <item>Сингапурский доллар</item>
        <item>Таджикских сомони</item>
        <item>Турецких лир</item>
        <item>Новый туркменский манат</item>
        <item>Узбекских сумов</item>
        <item>Украинских гривен</item>
        <item>Чешских крон</item>
        <item>Шведских крон</item>
        <item>Швейцарский франк</item>
        <item>Южноафриканских рэндов</item>
        <item>Вон Республики Корея</item>
        <item>Японских иен</item>
    </string-array>

    <string-array name="pref_favorite_currencies_values">
        <item>AUD</item>
        <item>GBP</item>
        <item>BYR</item>
        <item>DKK</item>
        <item>USD</item>
        <item>EUR</item>
        <item>AZN</item>
        <item>AMD</item>
        <item>BYN</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>HUF</item>
        <item>HKD</item>
        <item>INR</item>
        <item>KZT</item>
        <item>CAD</item>
        <item>KGS</item>
        <item>CNY</item>
        <item>MDL</item>
        <item>NOK</item>
        <item>PLN</item>
        <item>RON</item>
        <item>XDR</item>
        <item>SGD</item>
        <item>TJS</item>
        <item>TRY</item>
        <item>TMT</item>
        <item>UZS</item>
        <item>UAH</item>
        <item>CZK</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>ZAR</item>
        <item>KRW</item>
        <item>JPY</item>
    </string-array>

    <string-array name="pref_default_favorite_currencies">
        <item>USD</item>
        <item>EUR</item>
    </string-array>

</resources>