<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="Основные">
        <EditTextPreference
            android:defaultValue="@string/default_server_url"
            android:title="@string/pref_server_ur_title"
            android:summary="@string/pref_server_url_summary"
            android:key="URL"
            android:inputType="textUri"
            android:dialogTitle="Введите URL сервера" />
        <MultiSelectListPreference
            android:key="favorite_currencies"
            android:title="Отслеживаемые валюты"
            android:summary="Нажмите, чтобы выбрать список отслеживаемых валют"
            android:entries="@array/pref_favorite_currencies"
            android:entryValues="@array/pref_favorite_currencies_values"
            android:defaultValue="@array/pref_default_favorite_currencies"/>
    </PreferenceCategory>
</PreferenceScreen>