<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/listItem_charCodeAndNominal"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/text_charcode_and_nominal"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listItem_name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/text_currency_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/listItem_charCodeAndNominal"
        app:layout_constraintTop_toBottomOf="@id/listItem_charCodeAndNominal" />

    <TextView
        android:id="@+id/listItem_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listItem_value"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_value"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/listItem_date"
        app:layout_constraintTop_toBottomOf="@id/listItem_date" />

</androidx.constraintlayout.widget.ConstraintLayout>