<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Space
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="1dp"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/favoriteListItem_charCodeAndNominal"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/text_charcode_and_nominal"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/favoriteListItem_date" />

    <TextView
        android:id="@+id/favoriteListItem_date"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_date"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/favoriteListItem_value"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_value"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/favoriteListItem_date"
        app:layout_constraintTop_toBottomOf="@id/favoriteListItem_date" />

    <TextView
        android:id="@+id/favoriteListItem_difference"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_difference"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/favoriteListItem_value"
        app:layout_constraintTop_toBottomOf="@id/favoriteListItem_value" />

</androidx.constraintlayout.widget.ConstraintLayout>